#2: support for --add-modules flag in Jigsaw CLI model